--- a/naresh-kumar-resume-template/index.html
+++ b/naresh-kumar-resume-template/index.html
@@ -164,6 +164,10 @@
                         <h4>PROFESSIONAL EXPERIENCE</h4>
                         <hr>
                         <br>
+                        <div id="experience">
+                            <ul id="experienceList2">
+                            </ul>
+                        </div>
                     </div>
                     <div id="projectsSection2">
                         <h4>PROJECTS</h4>
