all button functionalities added excluding download btn

--- a/naresh-kumar-resume-template/index.html
+++ b/naresh-kumar-resume-template/index.html
@@ -115,13 +115,19 @@
                             <h4>PROJECTS</h4>
                             <hr>
                             <br>
-                            <div id="projectContainer"></div>
+                            <div id="projectContainer">
+                                <ul id="projectsList">
+                                </ul>
+                        </div>
                         </div>
                         <div id="educationSection">
                             <h4>EDUCATION</h4>
                             <hr>
                             <br>
-                            <div id="educationContainer"></div>
+                            <div id="educationCont">
+                                <ul id="educationList1">
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -173,11 +179,19 @@
                         <h4>PROJECTS</h4>
                         <hr>
                         <br>
+                        <div id="projectContainer">
+                            <ul id="projectsList2">
+                            </ul>
+                        </div>
                     </div>
                     <div id="educationSection2">
                         <h4>EDUCATION</h4>
                         <hr>
                         <br>
+                        <div id="educationCont">
+                            <ul id="educationList2">
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
