readme file added, project host link added to readme

--- a/rahul-sharma-invoice-generator/index.html
+++ b/rahul-sharma-invoice-generator/index.html
@@ -161,6 +161,7 @@
               value="0"
             /><span class="percent">%</span>
           </div>
+          <h1 style="margin-top: 50px">Invoice Generator</h1>
         </div>
       </section>
     </form>
