--- a/rahul-sharma-invoice-generator/index.html
+++ b/rahul-sharma-invoice-generator/index.html
@@ -90,7 +90,7 @@
                 />
               </td>
               <td><input type="number" value="1" class="quantity" /></td>
-              <td><input type="number" value="1" class="price" /></td>
+              <td><input type="text" class="price" /></td>
               <td>
                 <i class="fa-solid fa-trash-can delete-btn"></i>
               </td>
